// Code generated by protoc-gen-all. DO NOT EDIT.
// This file is meant to be re-generated in place and/or deleted at any time.

syntax = "proto3";

package server.enums;

option go_package = "github.com/xhayamix/proto-gen-golang/pkg/domain/proto/server/enums";

enum ActiveUserType {
  ActiveUserType_Unknown = 0;
  // 仮登録
  ActiveUserType_provisional = 1;
  // アクティブユーザー
  ActiveUserType_Active = 2;
  // アカウント削除済み
  ActiveUserType_Deleted = 99;
}

enum ErrorCode {
  ErrorCode_Unknown = 0;
  // パラメータの不正
  ErrorCode_InvalidArgument = 1001;
  // サーバー内部エラー
  ErrorCode_Internal = 1002;
  // 認証エラー
  ErrorCode_Unauthenticated = 1003;
  // アクセス権限なし
  ErrorCode_PermissionDenied = 1004;
  // リソースが見つからなかった
  ErrorCode_NotFound = 1005;
  // ユーザーが見つからなかった
  ErrorCode_UserNotFound = 2001;
  // ユーザーは削除済み
  ErrorCode_UserDeleted = 2002;
  // メンテナンス中
  ErrorCode_InMaintenance = 2003;
  // アカウント停止中
  ErrorCode_AccountBan = 2004;
  // NGワードが含まれている
  ErrorCode_NgWordContains = 2005;
  // 無効な日付
  ErrorCode_ShopInvalidDay = 2006;
}
